fix z-index on infobox after prev commit break

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -31,9 +31,6 @@
       margin: 1vh 0 0 0;
       height: 90vh;
       width: 95%;
-    }
-
-    .app-header-infobox--visible {
       z-index: 1;
     }
   }
